Opened 13 years ago

Closed 13 years ago

#2566 closed defect (fixed)

concat demuxer crash with empty file

Reported by: Clément Bœsch Owned by:
Priority: important Component: avformat
Version: git-master Keywords: concat
Cc: Blocked By:
Blocking: Reproduced by developer: no
Analyzed by developer: no

Description

[~/src/ffmpeg]% true > bla
[~/src/ffmpeg]% ./ffmpeg -f concat -i bla -f null -
ffmpeg version N-53031-g7d1d596 Copyright (c) 2000-2013 the FFmpeg developers
  built on May 13 2013 22:42:22 with gcc 4.8.0 (GCC) 20130502 (prerelease)
  configuration: --enable-gpl --enable-version3 --enable-fontconfig --enable-libfreetype --enable-libmp3lame --enable-libvorbis --enable-libxvid --enable-libx264 --enable-libvpx --enable-libtheora --enable-x11grab --enable-libopenjpeg --enable-libass --enable-libmodplug --enable-libv4l2 --cc=colorgcc --samples=/home/ubitux/fate-samples --prefix=/tmp/ffinstall --disable-runtime-cpudetect --enable-libcelt --enable-libopencv --enable-frei0r --enable-libcaca --enable-libiec61883 --enable-libopencore-amrwb --enable-libopencore-amrnb --enable-libopus --enable-libpulse --enable-libspeex --enable-libquvi
  libavutil      52. 31.100 / 52. 31.100
  libavcodec     55.  9.100 / 55.  9.100
  libavformat    55.  7.100 / 55.  7.100
  libavdevice    55.  0.100 / 55.  0.100
  libavfilter     3. 65.100 /  3. 65.100
  libswscale      2.  3.100 /  2.  3.100
  libswresample   0. 17.102 /  0. 17.102
  libpostproc    52.  3.100 / 52.  3.100
zsh: segmentation fault (core dumped)  ./ffmpeg -f concat -i bla -f null -

Change History (1)

comment:1 by Elon Musk, 13 years ago

Resolution: fixed
Status: newclosed
Note: See TracTickets for help on using tickets.