lavf/concat: reject empty scripts.

Fix trac ticket #2566.